Add full-page hero with animations, separate CSS files per section, artisan gallery, and basic JavaScript form handling

--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/about.css" />
   </head>
   <body>
     <header>
@@ -32,8 +33,8 @@
       <section class="container">
         <article class="about-wrap">
           <div class="lady">
-          <img src="images/village_lady.jpg"  alt="village lady"/>
-        </div>
+            <img src="images/village_lady.jpg" alt="village lady"/>
+          </div>
           <h1 class="about-title">Afsanaah is a story of makers.</h1>
           <p class="about-tagline">
             We exist to keep India’s handcrafted traditions alive – one bag,
@@ -70,6 +71,55 @@
             <span class="about-pill">Women-led collectives and studios</span>
           </div>
         </article>
+
+        <div class="artisan-gallery">
+          <h2 class="gallery-title">Meet Our Artisans</h2>
+          <div class="artisan-grid">
+            <div class="artisan-card">
+              <img src="images/img5.jpeg" alt="Artisan weaving textiles">
+              <div class="artisan-info">
+                <h3>Textile Weavers</h3>
+                <p>Kutch, Gujarat</p>
+              </div>
+            </div>
+            <div class="artisan-card">
+              <img src="images/img3.jpeg" alt="Artisan crafting jewelry">
+              <div class="artisan-info">
+                <h3>Jewelry Makers</h3>
+                <p>Jaipur, Rajasthan</p>
+              </div>
+            </div>
+            <div class="artisan-card">
+              <img src="images/img4.jpeg" alt="Pottery artisan">
+              <div class="artisan-info">
+                <h3>Pottery Artisans</h3>
+                <p>Khurja, Uttar Pradesh</p>
+              </div>
+            </div>
+            <div class="artisan-card">
+              <img src="images/img6.jpeg" alt="Wood carving artisan">
+              <div class="artisan-info">
+                <h3>Wood Carvers</h3>
+                <p>Saharanpur, Uttar Pradesh</p>
+              </div>
+            </div>
+            <div class="artisan-card">
+              <img src="images/img1.jpeg" alt="Bag making artisan">
+              <div class="artisan-info">
+                <h3>Bag Makers</h3>
+                <p>Women's Cooperatives</p>
+              </div>
+            </div>
+            <div class="artisan-card">
+              <img src="images/img2.jpeg" alt="Embroidery artisan">
+            </div>
+              <div class="artisan-info">
+                <h3>Embroidery Artists</h3>
+                <p>Lucknow, Uttar Pradesh</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
@@ -80,6 +130,7 @@
         </p>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
 
