--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/contact.css" />
   </head>
   <body>
     <header>
@@ -37,7 +38,7 @@
             collective, write to us and we’ll get back within 2–3 working days.
           </p>
 
-          <form>
+          <form id="contact-form">
             <div class="form-field">
               <label class="form-label" for="name">Name</label>
               <input
@@ -102,6 +103,7 @@
         </p>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
 
