--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/home.css" />
   </head>
   <body>
     <header>
@@ -29,32 +30,48 @@
     </header>
 
     <main>
-      <section class="hero container">
-        <div class="hero-card">
-          <div class="hero-kicker">
-            <span class="hero-kicker-dot"></span>
-            <span>Handmade marketplace</span>
+      <section class="hero-full">
+        <div class="hero-background">
+          <div class="artisan-images">
+            <div class="artisan-img artisan-1">
+              <img src="https://images.unsplash.com/photo-1520970014086-2208d157c9e2?auto=format&fit=crop&w=600&q=80" alt="Artisan weaving">
+            </div>
+            <div class="artisan-img artisan-2">
+              <img src="https://images.unsplash.com/photo-1578662996442-48f60103fc96?auto=format&fit=crop&w=600&q=80" alt="Artisan crafting">
+            </div>
+            <div class="artisan-img artisan-3">
+              <img src="https://images.unsplash.com/photo-1591081658714-6c76b264b4a3?auto=format&fit=crop&w=600&q=80" alt="Handmade pottery">
+            </div>
+            <div class="artisan-img artisan-4">
+              <img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f?auto=format&fit=crop&w=600&q=80" alt="Traditional craft">
+            </div>
           </div>
-          <h1 class="hero-title">
-            Stories woven by
-            <span>Indian artisans</span>.
-          </h1>
-          <p class="hero-text">
-            Afsanaah is a curated marketplace for handmade bags, slow-woven
-            textiles, earthy jewelry, and decor crafted in small batches across
-            India’s artisan communities.
-          </p>
-          <div class="hero-meta">
-            <a href="products.html" class="btn-primary">Shop Now</a>
-            <p class="hero-note">
-              Over <strong>120+</strong> artisan clusters · Fair &amp; mindful sourcing
+          <div class="hero-overlay"></div>
+        </div>
+        
+        <div class="hero-content-full">
+          <div class="hero-card-full">
+            <div class="hero-kicker">
+              <span class="hero-kicker-dot"></span>
+              <span>Handmade marketplace</span>
+            </div>
+            <h1 class="hero-title">
+              Stories woven by
+              <span>Indian artisans</span>.
+            </h1>
+            <p class="hero-text">
+              Afsanaah is a curated marketplace for handmade bags, slow-woven
+              textiles, earthy jewelry, and decor crafted in small batches across
+              India's artisan communities.
             </p>
+            <div class="hero-meta">
+              <a href="products.html" class="btn-primary">Shop Now</a>
+              <p class="hero-note">
+                Over <strong>120+</strong> artisan clusters · Fair &amp; mindful sourcing
+              </p>
+            </div>
           </div>
         </div>
-        <div class="hero-right">
-        <img src="images/handicraft.png" alt="Handicraft Image">
-    </div>
-        
       </section>
 
       <section class="section container">
@@ -128,6 +145,7 @@
         </p>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
 
