--- a/products.html
+++ b/products.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/products.css" />
   </head>
   <body>
     <header>
@@ -170,6 +171,7 @@
         </p>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
 
